[metadata]
name = PyMutator
version = attr: pymutator.VERSION
description = SolidJS style updating of nested python objects
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
url = http://github.com/tompaton/pymutator
author = Tom Paton
author_email = tom.paton@gmail.com
license=MIT
    
[options]
packages = find:
include_package_data = True

[options.package_data]
* = *.rst

